set up comments to makr what work needs to be done

--- a/blog_project/blog/templates/blog/base.html
+++ b/blog_project/blog/templates/blog/base.html
@@ -5,10 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blog site</title>
+    <!-- bootstrap -->
+
+    <!-- medium style editor -->
+
+
+    <!-- custom css -->
+
+    <!-- google fonts -->
+
+
 </head>
 <body>
     
     <p>Hello world</p>
+    <!-- NAVBAR -->
+
     {% block body_block %}
 
     {% endblock %}
