added note on how to add medium style editor functionality to text fields

--- a/blog_project/blog/templates/blog/base.html
+++ b/blog_project/blog/templates/blog/base.html
@@ -18,6 +18,7 @@
     <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
     <!-- Licensed for educational purposes only! -->
+    <!-- in order to use it, add 'editable' and 'medium-style-editor' classes to fieldset -->
 
 
     <!-- custom css -->
