added link to blog.css

--- a/blog_project/blog/templates/blog/base.html
+++ b/blog_project/blog/templates/blog/base.html
@@ -20,8 +20,9 @@
     <!-- Licensed for educational purposes only! -->
     <!-- in order to use it, add 'editable' and 'medium-style-editor' classes to fieldset -->
 
-
     <!-- custom css -->
+    <!-- this works, because there's already laod staticfiles tag up there -->
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
     <!-- google fonts -->
 
