added google font ... ubuntu

--- a/blog_project/blog/templates/blog/base.html
+++ b/blog_project/blog/templates/blog/base.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
     <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
 
 
 </head>
