--- a/blog_project/blog/templates/registration/login.html
+++ b/blog_project/blog/templates/registration/login.html
@@ -7,7 +7,7 @@
     <h4 class="lead text-muted">(Must be superuser)</h4>
 
     {% if form.errors %}
-    <div  class="btn btn-outline-danger">
+    <div  class="alert alert-danger" role="alert">
         <p>Username and/or password did not match</p>
     </div>
     {% endif%}
