--- a/blog_project/blog/static/css/blog.css
+++ b/blog_project/blog/static/css/blog.css
@@ -1,4 +1,9 @@
-
+.techfont{
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1.5em;
+}
+  
+  
   .loader {
     filter:hue-rotate(0deg);
     color:linear-gradient(45deg,#0f8,#08f);
