--- a/blog_project/blog/templates/blog/base.html
+++ b/blog_project/blog/templates/blog/base.html
@@ -35,7 +35,7 @@
     <p>Hello world</p>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light techfont">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand brand-styling" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
