--- a/blog_project/blog/templates/blog/base.html
+++ b/blog_project/blog/templates/blog/base.html
@@ -41,11 +41,14 @@
                 <a class="navbar-brand brand-styling" href="{% url 'post_list' %}">My_blog</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="{% url '%}">Home</a>
+              <a class="nav-link" href="{% url 'about' %}">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>            
+              <a class="nav-link" href="#">Code@Github</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">LinkedIn</a>
+              </li>
           </ul>
         </div>
     </nav>
