--- a/blog_project/blog/templates/blog/base.html
+++ b/blog_project/blog/templates/blog/base.html
@@ -48,13 +48,27 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">LinkedIn</a>
-              </li>
+            </li>
+          </ul>
+
+          <ul class="navbar-nav mr-auto">
+              {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'post_new' %}">New Post</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'drafts' %}">Drafts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Welcome, {{user.username}}</a>
+                </li>
+              {% endif %}
           </ul>
         </div>
     </nav>
-
-
-
     {% block body_block %}
 
     {% endblock %}
