--- a/blog_project/blog/templates/blog/base.html
+++ b/blog_project/blog/templates/blog/base.html
@@ -31,10 +31,10 @@
 
 </head>
 <body>
-    
+    <div class="container">
     <p>Hello world</p>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light techfont">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary techfont">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -65,6 +65,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Welcome, {{user.username}}</a>
                 </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                </li>
               {% endif %}
           </ul>
         </div>
@@ -72,5 +76,6 @@
     {% block body_block %}
 
     {% endblock %}
+</div>
 </body>
 </html>
