--- a/blog_project/blog/templates/blog/about.html
+++ b/blog_project/blog/templates/blog/about.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
 {% block body_block %}
     <h4>About View</h4>
+    <p>thanks for checking it out</p>
 {% endblock %}
