--- a/blog_project/blog/templates/blog/post_list.html
+++ b/blog_project/blog/templates/blog/post_list.html
@@ -3,6 +3,12 @@
 {% block body_block %}
 
 <div class="centerstage">
-
+    {% for post in post_list %}
+    <div class="post">
+        <h4>
+            <a href="{% url 'post_detail' pk=post.id %}">{{ post.title }}</a>
+        </h4>
+    </div>
+    {% endfor %}
 </div>
 {% endblock %}
