added post published date

--- a/blog_project/blog/templates/blog/post_list.html
+++ b/blog_project/blog/templates/blog/post_list.html
@@ -8,6 +8,9 @@
         <h4>
             <a href="{% url 'post_detail' pk=post.id %}">{{ post.title }}</a>
         </h4>
+        <div class="post_date">
+            <p>Published @ {{ post.published_date|date:"D M Y"}}</p>
+        </div>
     </div>
     {% endfor %}
 </div>
