declared h4 post title with loader class css

--- a/blog_project/blog/templates/blog/post_detail.html
+++ b/blog_project/blog/templates/blog/post_detail.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
 
 {% block body_block %}
+<h4 class="post_title loader">{{ post.title }}</h4>
             
 {% endblock %}
