--- a/blog_project/blog/templates/blog/post_detail.html
+++ b/blog_project/blog/templates/blog/post_detail.html
@@ -11,5 +11,10 @@
     {% endif %}
 
     <p class="post_content">{{ post.title|safe|linebreaksbr}}</p>
+
+    {% if user.is_authenticated %}
+        <a href="{% url 'post_update' pk=post.pk %}" class="btn btn-outline-success">Edit</a>
+        <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger">Delete</a>
+    {% endif %}
             
 {% endblock %}
