--- a/blog_project/blog/templates/blog/post_detail.html
+++ b/blog_project/blog/templates/blog/post_detail.html
@@ -13,8 +13,10 @@
     <p class="post_content">{{ post.title|safe|linebreaksbr}}</p>
 
     {% if user.is_authenticated %}
+    <div class="btn-group" role="group">
         <a href="{% url 'post_update' pk=post.pk %}" class="btn btn-outline-success">Edit</a>
         <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger">Delete</a>
+    </div>
     {% endif %}
     <hr>
     <a href="{% url 'add_comment_to_post' pk=post.pk %}" class="btn btn-outline-primary">Add a comment</a>
@@ -25,12 +27,14 @@
             {% if user.is_authenticated or comment.approved_comment %}
                 {{ comment.create_date }}
                 {% if not comment.approved_comment %}
-                    <a href="{% url 'comment_approve' pk=comment.pk s%}" class="btn btn-outline-success">
+                <div class="btn-group" role="group">
+                    <a href="{% url 'comment_approve' pk=comment.pk %}" class="btn btn-outline-success">
                         Approve
                     </a>
-                    <a href="{% url 'comment_remove' pk=comment.pk s%}" class="btn btn-outline-danger">
+                    <a href="{% url 'comment_remove' pk=comment.pk %}" class="btn btn-outline-danger">
                         Delete
                     </a>
+                </div>
                 {% endif %}
             {% endif %}
         {% endfor %}
