added comment.text paragraph with filters

--- a/blog_project/blog/templates/blog/post_detail.html
+++ b/blog_project/blog/templates/blog/post_detail.html
@@ -36,6 +36,7 @@
                     </a>
                 </div>
                 {% endif %}
+                <p> {{ comment.text|safe|linebreaksbr}}</p>
             {% endif %}
         {% endfor %}
     </div>
