--- a/blog_project/blog/templates/blog/post_detail.html
+++ b/blog_project/blog/templates/blog/post_detail.html
@@ -37,6 +37,7 @@
                 </div>
                 {% endif %}
                 <p> {{ comment.text|safe|linebreaksbr}}</p>
+                <p> Posted by: {{ comment.author }}</p>
             {% endif %}
         {% endfor %}
     </div>
