added empty tag, and paragraph to handle it

--- a/blog_project/blog/templates/blog/post_detail.html
+++ b/blog_project/blog/templates/blog/post_detail.html
@@ -39,6 +39,8 @@
                 <p> {{ comment.text|safe|linebreaksbr}}</p>
                 <p> Posted by: {{ comment.author }}</p>
             {% endif %}
+            {% empty %}
+            <p>No comments yet</p>
         {% endfor %}
     </div>
             
