--- a/blog_project/blog/templates/blog/post_form.html
+++ b/blog_project/blog/templates/blog/post_form.html
@@ -1,5 +1,10 @@
 {% extends 'blog/base.html' %}
 
 {% block body_block %}
-            
+<h1>New Post</h1>
+<form action="" method="post" class="post-form">
+    {% csrf_token %}
+    {{ form.as_p }}
+
+</form>
 {% endblock %}
