added medium editor instance

--- a/blog_project/blog/templates/blog/post_form.html
+++ b/blog_project/blog/templates/blog/post_form.html
@@ -7,4 +7,11 @@
     {{ form.as_p }}
     <button type="submit" class="btn btn-outline-success">Save</button>
 </form>
+<!--
+    https://github.com/yabwe/medium-editor
+    instantiating a new MediumEditor object
+-->
+<script>
+    var editor = new MediumEditor('.editable');
+</script>
 {% endblock %}
