--- a/blog_project/blog/templates/blog/drafts.html
+++ b/blog_project/blog/templates/blog/drafts.html
@@ -1,5 +1,12 @@
 {% extends 'blog/base.html' %}
 
 {% block body_block %}
+
+    {% for post in posts %}
+        <div class="post">
+            <p class="date">Created: {{ post.create_date }}</p>
+        </div>
+
+    {% endfor %}
             
 {% endblock %}
