--- a/blog_project/blog/templates/blog/drafts.html
+++ b/blog_project/blog/templates/blog/drafts.html
@@ -4,7 +4,7 @@
 
     {% for post in posts %}
         <div class="post">
-            <p class="date">Created: {{ post.create_date }}</p>
+            <p class="date">Created: {{ post.create_date|date:"d-m-Y" }}</p>
         </div>
 
     {% endfor %}
