--- a/blog_project/blog/templates/blog/drafts.html
+++ b/blog_project/blog/templates/blog/drafts.html
@@ -6,6 +6,7 @@
         <div class="post">
             <p class="date">Created: {{ post.create_date|date:"d-m-Y" }}</p>
         </div>
+        <h1><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h1>
 
     {% endfor %}
             
