--- a/blog_project/blog/templates/blog/drafts.html
+++ b/blog_project/blog/templates/blog/drafts.html
@@ -7,7 +7,7 @@
             <p class="date">Created: {{ post.create_date|date:"d-m-Y" }}</p>
         </div>
         <h1><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h1>
-
+        <p>{{ post.get_text_pretty}}</p>
     {% endfor %}
             
 {% endblock %}
