--- a/blog_project/blog/templates/blog/post_confirm_delete.html
+++ b/blog_project/blog/templates/blog/post_confirm_delete.html
@@ -1,5 +1,9 @@
 {% extends 'blog/base.html' %}
 
 {% block body_block %}
-            
+    <form action="" method="post">
+        {% csrf_token %}
+        <p>Confirm post delete {{ object}}?</p>
+        <input type="submit" value="Yes" class="btn btn-outline-danger">
+    </form>
 {% endblock %}
