--- a/blog_project/blog/templates/blog/comment_form.html
+++ b/blog_project/blog/templates/blog/comment_form.html
@@ -1,5 +1,11 @@
 {% extends 'blog/base.html' %}
 
 {% block body_block %}
+    <h1>New Comment</h1>
+    <form method="post" class="post-form">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-outline-success">Post it!</button>
+    </form>
             
 {% endblock %}
