--- a/blog_project/blog/templates/blog/comment_form.html
+++ b/blog_project/blog/templates/blog/comment_form.html
@@ -7,5 +7,8 @@
         {{ form.as_p }}
         <button type="submit" class="btn btn-outline-success">Post it!</button>
     </form>
-            
+<!-- Medium style Editor script instance -->
+    <script>
+        var editor = new MediumEditor('.editable');
+    </script>
 {% endblock %}
